# BitVM

./: Cargo.toml  scripts.txt
bitvm/: Cargo.toml
bitvm-prover/: Cargo.toml
bitvm-prover/src/: lib.rs
bitvm/src/: lib.rs
bitvm/src/bigint/: add.rs  bits.rs  mod.rs  std.rs
bitvm/src/bn254/: ell_coeffs.rs  fp254impl.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g1.rs  g2.rs  g2_sg_check.rs  msm.rs  pairing.rs  utils.rs
bitvm/src/chunk/: g16_runner_core.rs  g16_runner_utils.rs  taps_ext_miller.rs  taps_msm.rs  taps_mul.rs  taps_point_ops.rs
bitvm/src/chunker/: chunk_evaluate_line.rs  chunk_non_fixed_point.rs
bitvm/src/clementine/: additional_disprove.rs  additional_disproves.rs  circuit_output_hash.rs  mod.rs  utils.rs
bitvm/src/groth16/: offchain_checker.rs
bitvm/src/hash/: blake3_u4.rs
bitvm/src/signatures/: mod.rs  public.rs  winternitz.rs  wots_api.rs
bridge/header_chain/circuits/: header_chain.rs  merkle_tree.rs  mmr_guest.rs
bridge/zkvm_circuits/final-circuit/guest/: Cargo.toml
bridge/zkvm_circuits/header-chain/: build.rs
bridge/zkvm_circuits/header-chain/guest/: Cargo.toml
core/: Cargo.toml
final-spv/: Cargo.toml
final-spv/final-spv-guest/: Cargo.toml  build.rs
final-spv/src/: lib.rs  utils.rs
header-chain/: Cargo.toml
header-chain/header-chain-guest/: Cargo.toml  build.rs
prover/: Cargo.toml
prover/src/: lib.rs
src/: lib.rs  main.rs  pseudo.rs
src/bigint/: bits.rs  inv.rs  std.rs  u29x9.rs
src/bn254/: curves.rs  ell_coeffs.rs  fp254impl.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  msm.rs  pairing.rs  utils.rs
src/chunker/: chunk_groth16_verifier.rs  chunk_scalar_mul.rs  mod.rs  utils.rs
src/chunker/data/: proof.json  public.json  vk.json
src/fflonk/: check_format.rs  checkpairing_miller_loop.rs  fflonk_verify_script.rs  mod.rs  verifier.rs
src/fflonk/circom_new/: proof.json  public.json  verification_key.json
src/groth16/: mod.rs  offchain_checker.rs  split.rs  test.rs  utils.rs  verifier.rs
src/groth16/work_dir/: proof.json  public.json  vk.json
src/hash/: blake3.rs  blake3_u4.rs  mod.rs
src/header_chain/circuits/: mmr_native.rs  spv.rs  transaction.rs
src/signatures/: mod.rs  winternitz.rs  winternitz_compact.rs  winternitz_compact_modified.rs  winternitz_compact_modified_256.rs  winternitz_ell.rs  winternitz_generic.rs  winternitz_groth16.rs  winternitz_hash.rs
src/u32/: u32_xor.rs
src/u4/: u4_add_stack.rs  u4_logic_stack.rs  u4_rot_stack.rs  u4_shift_stack.rs  u4_std.rs
zkvm_circuits/: build.dockerfile
zkvm_circuits/final-circuit/guest/: Cargo.toml
zkvm_circuits/header-chain/guest/: Cargo.toml
