[workspace]
resolver = "2"
members = ["bridge", "core"]

[workspace.dependencies]
#bitcoin-script = { path = "../rust-bitcoin-script"}
#bitcoin-scriptexec = { path = "../rust-bitcoin-scriptexec"}
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script", branch= "StructuredScript" }
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm", features = ["rand-std"]}
strum = "0.26"
strum_macros = "0.26"
hex = "0.4.3"
bitcoin-scriptexec = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec/"}
serde = { version = "1.0.197", features = ["derive"] }
num-bigint = "0.4.4"
num-traits = "0.2.18"
ark-bn254 = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop", features = ["curve"], default-features = false }
ark-ff = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-ec = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16" }
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
esplora-client = { git = "https://github.com/BitVM/rust-esplora-client" }
serde_json = "1.0.116"
lazy_static = "1.4.0"
bitcoin-script-stack = { git = "https://github.com/BitVM/rust-bitcoin-script-stack", branch = "bitvm" }
rand = "0.8.5"
rand_chacha = "0.3.1"
once_cell = "1.19.0"
dotenv = "0.15.0"
aws-sdk-s3 = "1.40.0"
regex = "1.10.5"
blake3 = "=1.5.1"
paste = "1.0.15"
musig2 = { version = "0.0.11", features = ["serde", "rand"] }
futures = "0.3.30"
async-trait = "0.1.81"
suppaftp = { version = "6.0.1", features = ["async", "async-native-tls"] }
openssh-sftp-client = { version = "0.14.6", features = ["openssh"] }
openssh = { version = "0.10.4", features = ["native-mux"] }
alloy = { version = "0.2.1", features = ["full"] }
clap = { version = "4.5.16", features = ["derive", "cargo", "env"] }
toml = "0.5.11"
colored = "2.0.0"

# Header Chain Proof
risc0-zkvm = { version="1.1.3", features = ["prove"]}
borsh = {version = "1.5.1", features = ["derive"] }
crypto-bigint = "0.5.5"